TC changes to Section 1/Intro

--- a/jors2015.bib
+++ b/jors2015.bib
@@ -26,10 +26,10 @@ year = {2017},
 }
 
 
-@Article{stodden2008,
+@Article{stodden:2008,
   author = 	 {Victoria Stodden},
-  title = 	 {The Legal Framework for Reproducible Scientific Research: Licensing and Copyright}, 
-  journal = 	 {Computing in Science \& Engineering},
+  title = 	 {{The Legal Framework for Reproducible Scientific Research: Licensing and Copyright}}, 
+  journal = 	 {{Computing in Science \& Engineering}},
   year = 	 {2008},
   volume = 	 {11},
   number = 	 {1}
@@ -127,6 +127,16 @@ year = {2017},
   title = 	 {{Measuring Reproducibility in Computer Systems Research}},
   institution =  {Department of Computer Science, University of Arizona},
   year = 	 {2014}
+}
+
+@Article{collberg+proebstring:2016,
+  author = 	 {Christian Collberg and Todd A. Proebsting },
+  title = 	 {{Repeatability in Computer Systems Research}},
+  journal = 	 {{Communications of the ACM}},
+  year = 	 {2016},
+  volume = 	 {59},
+  number = 	 {3},
+  pages = 	 {62-69}
 }
 
 @article{Miller2006,
@@ -495,7 +505,8 @@ journal = {Science}
 @INPROCEEDINGS{crick-et-al_recomp2014,
   author =      {Tom Crick and Benjamin A. Hall and Samin Ishtiaq and Kenji Takeda},
   title =       {{``Share and Enjoy'': Publishing Useful (and Usable) Scientific Models}},
-  booktitle =   {{Proceedings of 1st International Workshop on Recomputability}},
+  booktitle = {{Proceedings of the 7th IEEE/ACM International Conference on Utility and Cloud Computing}},
+  pages={957--961}, 
   year =        {2014}
 }
 
@@ -605,3 +616,111 @@ journal = {Science}
   number =       {8},
   year =         {2014}
 } 
+
+@Book{nasem:2016,
+  author = 	 {{National Academies of Sciences, Engineering, and Medicine}},
+  title = 	 {{Statistical Challenges in Assessing and Fostering the Reproducibility of Scientific Results: Summary of a Workshop}},
+  publisher = 	 {{The National Academies Press}},
+  year = 	 {2016}
+}
+
+@Article{alberts-et-al:2015,
+  author = 	 {Bruce Alberts and Ralph J. Cicerone and Stephen E. Fienberg and Alexander Kamb and Marcia McNutt and Robert M. Nerem and Randy Schekman and Richard Shiffrin and Victoria Stodden and Subra Suresh and Maria T. Zuber and Barbara {Kline Pope} and {Kathleen Hall} Jamieson},
+  title = 	 {{Self-correction in science at work}},
+  journal = 	 {{Science}},
+  year = 	 {2015},
+  volume = 	 {348},
+  number = 	 {6242},
+  pages = 	 {1420-1422}
+}
+
+@Article{hesman-saey:2015,
+  author = 	 {Tina {Hesman Saey}},
+  title = 	 {{Repeat Performance: Too many studies, when replicated, fail to pass muster}},
+  journal = 	 {{Science News}},
+  year = 	 {2015},
+  volume = 	 {187},
+  number = 	 {2},
+  pages = 	 {21-26}
+}
+
+@Article{stodden-et-al:2016,
+  author = 	 {Victoria Stodden and Marcia McNutt and David H. Bailey and Ewa Deelman and Yolanda Gil and Brooks Hanson and Michael A. Heroux and John P.A. Ioannidis and Michela Taufer},
+  title = 	 {{Enhancing reproducibility for computational methods}},
+  journal = 	 {{Science}},
+  year = 	 {2016},
+  volume = 	 {354},
+  number = 	 {6317},
+  pages = 	 {1240-1241}
+}
+
+@Article{crick-et-al-irreprod:2015,
+  author = 	 {Neil P. {Chue Hong} and Tom Crick and Ian P. Gent and Lars Kotthoff and Kenji Takeda},
+  title = 	 {{Top Tips to Make Your Research Irreproducible}},
+  year = 	 {2015},
+  note =         {\url{http://arxiv.org/abs/1504.00062}}
+}
+
+@Article{prlic+proctor:2012,
+  author = 	 {Andreas Prli\'{c} and James B. Procter},
+  title = 	 {{Ten Simple Rules for the Open Development of Scientific Software}},
+  journal = 	 {{PLoS Computational Biology}},
+  year = 	 {2012},
+  volume = 	 {8},
+  number = 	 {12},
+  pages = 	 {e1002802}
+}
+
+@Article{masum-et-al:2013,
+  author = 	 {Hassan Masum and Aarthi Rao and Benjamin M. Good and Matthew H. Todd and Aled M. Edwards and Leslie Chan and Barry A. Bunin and Andrew I. Su and Zakir Thomas and Philip E. Bourne},
+  title = 	 {{Ten Simple Rules for Cultivating Open Science and Collaborative R\&D}},
+  journal = 	 {{PLoS Computational Biology}},
+  year = 	 {2013},
+  volume = 	 {9},
+  number = 	 {9},
+  pages = 	 {e1003244}
+}
+
+@Article{sandve-et-al:2013,
+  author = 	 {{Geir Kjetil} Sandve and Anton Nekrutenko and James Taylor and Eivind Hovig},
+  title = 	 {{Ten Simple Rules for Reproducible Computational Research}},
+  journal = 	 {{PLoS Computational Biology}},
+  year = 	 {2013},
+  volume = 	 {9},
+  number = 	 {10},
+  pages = 	 {e1003285}
+}
+
+@Article{osborne-et-al:2013,
+  author = 	 {James M. Osborne and Miguel O. Bernabeu and Maria Bruna and Ben Calderhead and Jonathan Cooper and Neil Dalchau and Sara-Jane Dunn and Alexander G. Fletcher and Robin Freeman and Derek Groen and Bernhard Knapp and Greg J. McInerny and Gary R. Mirams and Joe Pitt-Francis and Biswa Sengupta and David W. Wright and Christian A. Yates and David J. Gavaghan and Stephen Emmott and Charlotte Deane},
+  title = 	 {{Ten Simple Rules for Effective Computational Research}},
+  journal = 	 {{PLoS Computational Biology}},
+  year = 	 {2013},
+  volume = 	 {10},
+  number = 	 {3},
+  pages = 	 {e1003506}
+}
+
+@Article{goodman-et-al:2014,
+  author = 	 {Alyssa Goodman and Alberto Pepe and Alexander W. Blocker and Christine L. Borgman and Kyle Cranmer and Merce Crosas and Rosanne {Di Stefano} and Yolanda Gil and Paul Groth and Margaret Hedstrom and David W. Hogg and Vinay Kashyap and Ashish Mahabal and Aneta Siemiginowska and Aleksandra Slavkovic},
+  title = 	 {{Ten Simple Rules for the Care and Feeding of Scientific Data}},
+  journal = 	 {{PLoS Computational Biology}},
+  year = 	 {2014},
+  volume = 	 {10},
+  number = 	 {4},
+  pages = 	 {e1003542}
+}
+
+@Article{list-et-al:2017,
+  author = 	 {Markus List and Peter Ebert and Felipe Albrecht},
+  title = 	 {{Ten Simple Rules for Developing Usable Software in Computational Biology}},
+  journal = 	 {{PLoS Computational Biology}},
+  year = 	 {2017},
+  volume = 	 {13},
+  number = 	 {1},
+  pages = 	 {e1005265}
+}
+
+
+
+
