TC changes to Section 2

--- a/jors2015.bib
+++ b/jors2015.bib
@@ -205,8 +205,8 @@ year = {2014}
 
 @article{Giles2004,
  author = {Jim Giles},
- title = {Software company bans competitive users},
- journal = {Nature},
+ title = {{Software company bans competitive users}},
+ journal = {{Nature}},
  volume = {429},
  number = {6989},
  year = {2004}
@@ -721,6 +721,12 @@ journal = {Science}
   pages = 	 {e1005265}
 }
 
-
-
+@Article{smith-et-al:2016,
+  author = 	 {Arfon M. Smith and Daniel S. Katz and Kyle E. Niemeyer and {the FORCE11 Software Citation Working Group}},
+  title = 	 {{Software Citation Principles}},
+  journal = 	 {{PeerJ Computer Science}},
+  year = 	 {2016},
+  volume = 	 {2},
+  number = 	 {e86}
+}
 
