--- a/jors2015.tex
+++ b/jors2015.tex
@@ -514,28 +514,27 @@ great start that begin to expose what can be done in this area.
 \section{A Model for Reproducible Research Software}\label{sec:conclusion} 
 %\section{Conclusions: A New Model}
 
-Some of the Recommendations above, like ``Be A Better Person'' or
-``The Lingua Franca'', are abstract, airy-fairy, pie-in-the-sky
-even. However, most of them can be concretely realized by a service
-for reproducibility. This service provides a concrete implementation
-of free source code (``Set The Code Free'') that depends on other free
-source code (``Lineage'') building (``YMMV'', ``Welcome to Web 2.0'')
-and running tests contributed in public (``Data Representations'',
-``World Records'') in a completely reproducible regime.
+Some of our Recommendations, such as ``{\emph{Be A Better Person}}''
+or ``{\emph{The Lingua Franca}}'', are abstract, airy-fairy,
+pie-in-the-sky even. However, most of them can be concretely realised
+by a service for reproducibility. This service provides a concrete
+implementation of free source code (``{\emph{Set The Code Free}}'')
+that depends on other free source code (``{\emph{Lineage}}'') building
+(``{\emph{YMMV}}'', ``{\emph{Welcome to Web 2.0}}'') and running tests
+contributed in public (``{\emph{Data Representations}}'',
+``{\emph{World Records}}'') in a completely reproducible regime.
 
-The service we describe here can be seen as a specification. We
-haven't built it, but many services like travis-ci or Azure VSTS
-provide some of the mechanical parts of it. 
+The service we describe here can be seen as a specification. We have
+not built it, but many services like travis-ci or Azure VSTS provide
+some of the mechanical parts of it.  A service for reproducibility is
+intended to play three important roles; it should:
 
-A service for reproducibility is intended to play three important
-roles. It should:
-
-\begin{enumerate}
+\begin{enumerate}[i)]
 \item Demonstrate that a piece of code can be compiled, run
 and behaves as described, without manual intervention from the
-developer.
+developer;
 \item Store and link specific artefacts with their linked
-publications or other publicly-accessible datasets.
+publications or other publicly-accessible datasets;
 \item Allow new benchmarks to be added, by users other than
 the developer, to widen the testing and identify potential bugs.
 \end{enumerate}
@@ -545,7 +544,7 @@ is that {\emph{algorithms}} (and their {\emph{implementations}}) and
 {\emph{models}} (sometimes also called {\emph{benchmarks}}) are
 inextricably linked. Algorithms are designed for certain types of
 models; models, though created to mimic some physical reality, also
-serve to stress the current known algorithms. An integrated autonomous
+serve to express the current known algorithms. An integrated autonomous
 open cloud-based service can make this link explicit.
 
 By developing a cloud-based, centralised service, which performs
@@ -565,8 +564,8 @@ research papers more closely to their outputs, making external
 validation easier and allows interested users to explore unaddressed
 sets of models. Critically, it helps researchers across computational
 science to be more productive, rather than reproducibility being an
-overhead on their day-to-day work. In the same way that tools such as
-GitHub make collaborating easier while simultaneously allowing
+overhead on top of their day-to-day work. In the same way that tools
+such as GitHub make collaborating easier while simultaneously allowing
 effortless sharing, we envisage our system being similarly usable for
 sharing and testing algorithms and their implementations, software,
 models and benchmarks online.
@@ -576,7 +575,7 @@ standard problem.  You write up the paper on the algorithm, and you
 also push an implementation of your algorithm to the our cloud
 environment's section on this standard problem. The effect of pushing
 your implementation is to register your program as a possible
-competitor in this standard problem competition. There are several
+competitor in this standard problem competition. There exist several
 dozen widely-agreed tests on this problem already on our cloud
 environment's database. Maybe, after some negotiation due to your
 novel approach to this standard problem, you add some of your own
@@ -607,14 +606,12 @@ software and computational techniques, then the proposal above would
 bring together almost all of the points we have discussed in this
 paper to provide an open research infrastructure for all. There are
 already several web services that already aim to do many of these
-things (for example, a repository for disseminating the computational
-models associated with publications in the social and life
-sciences~\cite{rollins-et-al:2014}), so a service that can integrate
-most if not all of these features is possible. Such a service would
-then allow algorithms and models to evolve together, and be
-reproducible from the outset. Something more complete, and stamped
-with the authority of the major domain
-conferences/journals/professional societies, would mean that your code
+things~\cite{rollins-et-al:2014,stodden-et-al:2015}, so a service that
+can integrate most if not all of these features is possible. Such a
+service would then allow algorithms and models to evolve together, and
+be reproducible from the outset. Something more open and complete, and
+stamped with the authority of the major domain
+conferences/journals/national academies, would mean that your code
 would never `bit-rot', and no one would have problems reproducing the
 implementation of your published algorithm.
 
